[S024]: Approve and publish professional profiles
